@@ -210,7 +210,7 @@ theme_set(theme_bw(base_size = 14) +
                   panel.grid.minor.x = element_blank()))
 cbpp <- lme4::cbpp 
 cbpp$prob <- with(cbpp, incidence / size)
-example_model <- stan_glmer(prob ~ size + period + (1|herd),
+example_model <- stan_glmer(prob ~ period + (1|herd),
                             data = cbpp, family = binomial, weight = size,
                             chains = 2, cores = 1, seed = 12345, iter = 500)
 ```
@@ -232,6 +232,42 @@ load(system.file("extdata/", "plots_rstanarm.rda", package = "afex"))
 plot_grid(b1, b2, labels = "AUTO")
 ```
 
+We can also produce a plot based on the individual Bernoulli observations in the data. For this, we first need to expand the data such that we have one row per observation. With this, we can then fit the essentially same model as above.
+
+```{r, eval=FALSE}
+cbpp_l <- vector("list", nrow(cbpp))
+for (i in seq_along(cbpp_l)) {
+  cbpp_l[[i]] <- data.frame(
+    herd = cbpp$herd[i],
+    period = cbpp$period[i],
+    incidence = rep(0, cbpp$size[i])
+  )
+  cbpp_l[[i]]$incidence[seq_len(cbpp$incidence[i])] <- 1
+}
+cbpp_l <- do.call("rbind", cbpp_l)
+cbpp_l$herd <- factor(cbpp_l$herd, levels = levels(cbpp$herd))
+cbpp_l$period <- factor(cbpp_l$period, levels = levels(cbpp$period))
+example_model2 <- stan_glmer(incidence ~ period + (1|herd),
+                             data = cbpp_l, family = binomial, 
+                             chains = 2, cores = 1, seed = 12345, iter = 500)
+```
+
+Again, this model can be directly passed to `afex_plot`. However, here we see even more 0 as the data is not yet aggregated. Consequently, we need to pass `id = "herd"` to aggregate the individual observations within each herd.
+
+```{r, eval=FALSE}
+b3 <- afex_plot(example_model2, "period")
+## dv column detected: incidence
+## No id column passed. Assuming all rows are independent samples.
+b4 <- afex_plot(example_model2, "period", id = "herd")
+## dv column detected: incidence
+plot_grid(b3, b4, labels = "AUTO")
+```
+
+```{r fig.width=7, fig.height=3, echo=FALSE}
+plot_grid(b3, b4, labels = "AUTO")
+```
+
+
 We can of course also fit a model assuming a normal distribution using `rstanarm`. For example using the `Machines` data.
 
 ```{r, eval=FALSE}
@@ -240,22 +276,20 @@ mm <- stan_lmer(score ~ Machine + (Machine|Worker), data=Machines,
                 chains = 2, cores = 1, seed = 12345, iter = 500)
 ```
 
-Again, we can pass this model directly to `afex_plot` (see panel A). However, the data is not aggregated within the groupin variable worker. If we want to aggregate the individual data points for the grouping factor, we need to pass both the name of the grouping variable (`Worker`) and the data used for fitting.
+As before, we can pass this model directly to `afex_plot` (see panel A). However, the data is again not aggregated within the grouping variable `Worker`. If we want to aggregate the individual data points for the grouping factor, we need to pass both the name of the grouping variable (`Worker`) and the data used for fitting.
 
 ```{r, eval=FALSE}
-b3 <- afex_plot(mm, "Machine")
+b5 <- afex_plot(mm, "Machine")
 ## dv column detected: score
 ## No id column passed. Assuming all rows are independent samples.
-b4 <- afex_plot(mm, "Machine", id = "Worker", data = Machines)
+b6 <- afex_plot(mm, "Machine", id = "Worker")
 ## dv column detected: score
-plot_grid(b3, b4, labels = "AUTO")
+plot_grid(b5, b6, labels = "AUTO")
 ```
 
 ```{r fig.width=7, fig.height=3, echo=FALSE}
-load(system.file("extdata/", "plots_rstanarm.rda", package = "afex"))
-plot_grid(b3, b4, labels = "AUTO")
+plot_grid(b5, b6, labels = "AUTO")
 ```
-
 
 ```{r, eval=FALSE, include=FALSE}
 library("rstanarm") ## requires resetting the ggplot2 theme
@@ -267,18 +301,36 @@ theme_set(theme_bw(base_size = 14) +
 set_sum_contrasts()
 cbpp <- lme4::cbpp 
 cbpp$prob <- with(cbpp, incidence / size)
-example_model <- stan_glmer(prob ~ size + period + (1|herd),
+example_model <- stan_glmer(prob ~ period + (1|herd),
                             data = cbpp, family = binomial, weight = size,
                             chains = 2, cores = 1, seed = 12345, iter = 500)
 b1 <- afex_plot(example_model, "period")
 b2 <- afex_plot(example_model, "period", data_geom = geom_violin)
 
+cbpp_l <- vector("list", nrow(cbpp))
+for (i in seq_along(cbpp_l)) {
+  cbpp_l[[i]] <- data.frame(
+    herd = cbpp$herd[i],
+    period = cbpp$period[i],
+    incidence = rep(0, cbpp$size[i])
+  )
+  cbpp_l[[i]]$incidence[seq_len(cbpp$incidence[i])] <- 1
+}
+cbpp_l <- do.call("rbind", cbpp_l)
+cbpp_l$herd <- factor(cbpp_l$herd, levels = levels(cbpp$herd))
+cbpp_l$period <- factor(cbpp_l$period, levels = levels(cbpp$period))
+example_model2 <- stan_glmer(incidence ~ period + (1|herd),
+                             data = cbpp_l, family = binomial, 
+                             chains = 2, cores = 1, seed = 12345, iter = 500)
+b3 <- afex_plot(example_model2, "period")
+b4 <- afex_plot(example_model2, "period", id = "herd")
+
 data("Machines", package = "MEMSS") 
 mm <- stan_lmer(score ~ Machine + (Machine|Worker), data=Machines,
                 chains = 2, cores = 1, seed = 12345, iter = 500)
-b3 <- afex_plot(mm, "Machine")
-b4 <- afex_plot(mm, "Machine", id = "Worker", data = Machines)
-save(b1, b2, b3, b4, file = "../inst/extdata/plots_rstanarm.rda", 
+b5 <- afex_plot(mm, "Machine")
+b6 <- afex_plot(mm, "Machine", id = "Worker", data = Machines)
+save(b1, b2, b3, b4, b5, b6, file = "../inst/extdata/plots_rstanarm.rda", 
      compress = "xz", version = 2)
 ```
 
